@@ -1,3 +1,4 @@
+- re-enabled Freakout superset 
 - optimized menu rendering by using labels
 - properly wait for release of keys and buttons
 - re-enabled and improved mini games
